--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,6 @@ cmake_minimum_required (VERSION 3.8)
 project ("JoNES")
 
 # Add source to this project's executable.
-add_executable (JoNES "JoNES.cpp" "JoNES.h" "JoNES_6502_Core.cpp")
+add_executable (JoNES "JoNES.cpp" "JoNES.h" "JoNES_6502_Core.cpp" "JoNES_PPU.cpp")
 
 # TODO: Add tests and install targets if needed.
